# Lab10_Quaternions

./: .gitignore  CMakeLists.txt  README.md
build_work/: CMakeCache.txt  cmake_install.cmake  launch-Lab10_Quaternions-RelWithDebInfo.sh
build_work/CMakeScripts/: ReRunCMake.make
build_work/Lab10_Quaternions.xcodeproj/: project.pbxproj
build_work/Lab10_Quaternions.xcodeproj/project.xcworkspace/xcuserdata/jon.xcuserdatad/: UserInterfaceState.xcuserstate
build_work/Lab10_Quaternions.xcodeproj/xcuserdata/jon.xcuserdatad/xcschemes/: xcschememanagement.plist
objects/: cube.mtl  suzanne.mtl
source/: Lab10_Quaternions  camera.cpp  camera.hpp  fragmentShader.frag  main.cpp  maths.cpp  maths.hpp  model.cpp  model.hpp  vertexShader.vert
